Add check out view

--- a/Front-End/app/index.html
+++ b/Front-End/app/index.html
@@ -43,4 +43,5 @@
 <script src="app/controllers/Service/services.js"></script>
 <script src="app/controllers/Service/search.js"></script>
 <script src="app/controllers/Service/cart.js"></script>
+<script src="app/controllers/Service/ServiceCart.js"></script>
 <script src="app/controllers/Service/deleteCart.js"></script>
