--- a/Front-End/app/index.html
+++ b/Front-End/app/index.html
@@ -16,7 +16,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   </head>
   <body ng-app="myApp">
-    <div ng-include="'views/inc/top_nav.html'"></div>
+     <!-- <div ng-include="'views/inc/top_nav.html'"></div>  -->
     <div ng-view> </div>
     <div ng-include="'views/inc/footer.html'"></div>
   </body>
@@ -24,6 +24,7 @@
 
 <!-- Add Services here -->
 <script src="app/services/ajax.js"></script>
+<script src="app/services/interCeptor.js"></script>
 
 
 <!-- Add Controllers here -->
@@ -32,11 +33,13 @@
 <script src="app/controllers/products.js"></script>
 <script src="app/controllers/Posts.js"></script> -->
 
+<script src="app/controllers/Customer/CustomerLogin.js"></script>
 <script src="app/controllers/Customer/home.js"></script>
 <script src="app/controllers/Customer/MyOrder.js"></script>
 <script src="app/controllers/Customer/MyOrderDetails.js"></script>
 <script src="app/controllers/Customer/MyProfile.js"></script>
 <script src="app/controllers/Customer/EditProfile.js"></script>
+<script src="app/controllers/Customer/logout.js"></script>
 
 <script src="app/controllers/Service/AllServices.js"></script>
 <script src="app/controllers/Service/serviceDetails.js"></script>
