Clear cart added

--- a/Front-End/app/index.html
+++ b/Front-End/app/index.html
@@ -48,3 +48,4 @@
 <script src="app/controllers/Service/cart.js"></script>
 <script src="app/controllers/Service/ServiceCart.js"></script>
 <script src="app/controllers/Service/deleteCart.js"></script>
+<script src="app/controllers/Service/ClearCart.js"></script>
